# web_homework_3

./: README.md  category_data.json  data.json  db.sqlite3  pr_data.json  product_data.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py  fill_category.py  fill_product.py
catalog/migrations/: 0001_initial.py  0002_alter_product_preview.py  0003_alter_product_name.py  0004_alter_product_name.py  0005_alter_product_name.py  0006_alter_product_create_date_and_more.py  0007_blog.py  0008_alter_blog_preview.py  0009_alter_blog_preview_version.py  0010_product_owner.py  0011_alter_product_options_product_is_published.py
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  category_list.html  contacts.html  home.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/include/: inc_main_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_verification_code_alter_user_is_active.py  0003_alter_user_verification_code.py  0004_rename_verification_code_user_verify_code.py  0005_alter_user_is_active.py  0006_alter_user_avatar.py
users/templates/users/: invalid_verify.html  login.html  register.html  verify_message.html
