[tool.poetry]
name = "web-homework-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "web_homework_2"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
contact = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
